--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
     <div class="main">
         <div class="input">
             <label for="message">Input:</label>
-            <textarea type="text" name="message" id="message"></textarea>
+            <textarea type="text" name="message" id="message" cols="50" rows="20"></textarea>
         </div>
         <button id="convert-btn">Convert</button>
+        <div class="animation"></div>
         <div class="output">
             <label for="result">Result:</label>
-            <textarea name="result" id="result" cols="60" rows="30"></textarea>
+            <textarea name="result" id="result" cols="50" rows="20"></textarea>
         </div>
     </div>
     </div>
